Fix validation message alignment issues.
Fixed #1564

--- a/frontend/src/app/components/login/signin-form/signin-form.less
+++ b/frontend/src/app/components/login/signin-form/signin-form.less
@@ -1,4 +1,11 @@
 .sign-in-from {
+
+    .val-msg {
+        position: relative;
+        margin-top: -1.7em;
+        top: 1.7em;
+    }
+
     .error {
         visibility: hidden;
 
